crates/cribo/tests/snapshots/bundled_code@xfail_bundle_third_party_namespace_split.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_namespace_split/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
acme_plugin_a = _cribo.types.SimpleNamespace(__name__='acme.plugin_a')
acme = _cribo.types.SimpleNamespace(__name__='acme', __initializing__=False, __initialized__=False, __path__=[])
acme.plugin_a = acme_plugin_a
NAME = "plugin_a"
acme_plugin_a.NAME = NAME
import acme.plugin_b
print(acme.plugin_a.NAME, acme.plugin_b.NAME)
plugin_a = acme.plugin_a
